Mini Calendar Alignment

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
         <div class="mini-calendar">
           <div class="mini-header">
             <div class="curr-date"></div>
-            <div class="mini-chevrons"></div>
+            <div class="mini-chevrons">
+              <i class="fa-solid fa-chevron-left fa-sm" style="color: #000000;"></i>
+              <i class="fa-solid fa-chevron-right fa-sm" style="color: #000000;"></i>
+            </div>
           </div>
           <div class="weekdays">S</div>
           <div class="weekdays">M</div>
